# xpaste

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  popup.html  release.yml  tsconfig.json  vite.config.ts  快捷键优先级说明.md  需求文档.md  需求梳理.md
src/: App.vue  PopupWindow.vue  main.ts  popup.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: classify.rs  clipboard.rs  db.rs  keyboard_hook.rs  main.rs  models.rs
src/services/: api.ts
src/styles/: app.css
